feat: verify Datalevin service startup and add JVM options for NIO access